--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -11,7 +11,7 @@
                                 Stationnements
                             </h4>
                         </div>
-                        {% if convention|display_convention_form_progressbar %}
+                        {% if convention|display_convention_form_progressbar  or request.session.is_expert %}
                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
                                 <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                             </a>
