--- a/templates/conventions/actions/goto.html
+++ b/templates/conventions/actions/goto.html
@@ -1,4 +1,4 @@
-{% if convention|display_convention_form_progressbar or request.session.is_expert %}
+{% if convention|display_convention_form_progressbar or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
     <a class="fr-link fr-mb-1w" href="{% url target_url convention_uuid=convention.uuid %}" >
         <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
     </a>
