--- a/templates/conventions/common/form_footer_button.html
+++ b/templates/conventions/common/form_footer_button.html
@@ -1,9 +1,9 @@
 <div class="form-button-footer fr-col-md-12 fr-py-5w">
-    {% if editable %}
+    {% if editable or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
         <div class="apilos--flex-row-left-center">
             <div class="fr-mr-4w">
                 {% if form_step.next_target %}
-                <a href="{% url form_step.next_target convention_uuid=convention.uuid %}" class="fr-link">Passer cette étape</a>
+                    <a href="{% url form_step.next_target convention_uuid=convention.uuid %}" class="fr-link">Passer cette étape</a>
                 {% endif %}
             </div>
             {% include "common/button/next_and_save.html" %}
