--- a/templates/conventions/recapitulatif/edd.html
+++ b/templates/conventions/recapitulatif/edd.html
@@ -11,7 +11,7 @@
                                 Opération - EDD
                             </h4>
                         </div>
-                        {% if convention|display_convention_form_progressbar  or request.session.is_expert %}
+                        {% if convention|display_convention_form_progressbar  or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
                             <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
                                 <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
                             </a>
