--- a/templates/conventions/actions/cancel_convention.html
+++ b/templates/conventions/actions/cancel_convention.html
@@ -25,15 +25,21 @@
         <div class="block--row-strech">
             <div class="block--row-strech-1 fr-mr-6w">
                 <p class="fr-mb-0">
-                    {% if convention.is_avenant %}L'avenant{% else %}La convention{% endif %} est annulé{% if not convention.is_avenant %}e{% endif %} mais {% if convention.is_avenant %}il{% else %}elle{% endif %} peut-être réactivé{% if not convention.is_avenant %}e{% endif %}. Son statut passera à nouveau en {% if convention.is_avenant %}Avenant{% else %}Convention{% endif %} en Projet
+                    {% if convention.is_avenant %}L'avenant{% else %}La convention{% endif %} est annulé{% if not convention.is_avenant %}e{% endif %} mais {% if convention.is_avenant %}il{% else %}elle{% endif %} peut-être réactivé{% if not convention.is_avenant %}e{% endif %}.<br/> Son statut passera à nouveau à {% if convention.is_avenant %}Avenant{% else %}Convention{% endif %} en Projet
                 </p>
             </div>
-            <form method="post" data-turbo="false" action="#top">
-                {% csrf_token %}
-                <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='reactive_convention' value=1>
-                    Réactiver  {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
+            {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant %}
+                <form method="post" data-turbo="false" action="#top">
+                    {% csrf_token %}
+                    <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='reactive_convention' value=1>
+                        Réactiver {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
+                    </button>
+                </form>
+            {% elif convention.is_avenant and not convention.parent|display_create_avenant %}
+                <button class="fr-btn fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" disabled>
+                    Un avenant est déjà en cours.
                 </button>
-            </form>
+            {% endif%}
         </div>
     </div>
     <hr>
