--- a/templates/conventions/recapitulatif/edd.html
+++ b/templates/conventions/recapitulatif/edd.html
@@ -11,11 +11,7 @@
                                 Opération - EDD
                             </h4>
                         </div>
-                        {% if convention|display_convention_form_progressbar  or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
-                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:edd' convention_uuid=convention.uuid %}" >
-                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                            </a>
-                        {% endif %}
+                        {% include "conventions/actions/goto.html" %}
                     </div>
                     <div class="table--limited-height">
                         {% include "common/display_text_and_files_if_exists.html" with label="EDD volumétrique" text=lot.edd_volumetrique|get_text_from_textfiles file_list=lot.edd_volumetrique|get_files_from_textfiles object_field="lot__edd_volumetrique__"|add:lot_uuid %}
