--- a/templates/conventions/actions/cancel_convention.html
+++ b/templates/conventions/actions/cancel_convention.html
@@ -2,17 +2,21 @@
 
 {% if convention|display_cancel_convention %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
-        <p class="fr-alert__title">Annuler la convention</p>
+        <p class="fr-alert__title">Annuler {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}</p>
         <div class="block--row-strech">
             <div class="block--row-strech-1 fr-mr-6w">
                 <p class="fr-mb-0">
-                    La convention peut être annulée. Elle sera encore accessible dans la liste des conventions
+                    {% if convention.is_avenant %}
+                        L'avenant peut être annulé. Il sera encore accessible dans la liste des avenants
+                    {% else %}
+                        La convention peut être annulée. Elle sera encore accessible dans la liste des conventions
+                    {% endif %}
                 </p>
             </div>
             <form method="post" data-turbo="false" action="#top">
                 {% csrf_token %}
                 <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='cancel_convention' value=1>
-                    Annuler cette convention
+                    Annuler {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
                 </button>
             </form>
         </div>
@@ -21,19 +25,29 @@
 {% endif %}
 {% if convention|display_reactive_convention %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
-        <p class="fr-alert__title">Ré-activer la convention</p>
+        <p class="fr-alert__title">Ré-activer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}</p>
         <div class="block--row-strech">
             <div class="block--row-strech-1 fr-mr-6w">
                 <p class="fr-mb-0">
-                    La convention est annulée mais elle peut-être réactivée. Son statut passera à nouveau en Convention en Projet
+                    {% if convention.is_avenant %}
+                        L'avenant est annulé mais il peut-être réactivé. Son statut passera à nouveau en Avenant en Projet
+                    {% else %}
+                        La convention est annulée mais elle peut-être réactivée. Son statut passera à nouveau en Convention en Projet
+                    {% endif %}
                 </p>
             </div>
-            <form method="post" data-turbo="false" action="#top">
-                {% csrf_token %}
-                <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='reactive_convention' value=1>
-                    Réactiver cette convention
+            {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant %}
+                <form method="post" data-turbo="false" action="#top">
+                    {% csrf_token %}
+                    <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" name='reactive_convention' value=1>
+                        Réactiver {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
+                    </button>
+                </form>
+            {% elif convention.is_avenant and not convention.parent|display_create_avenant %}
+                <button class="fr-btn fr-my-1w fr-icon-close-circle-line fr-btn--icon-left" disabled>
+                    Un avenant est déjà en cours.
                 </button>
-            </form>
+            {% endif%}
         </div>
     </div>
     <hr>
