--- a/templates/conventions/recapitulatif/stationnements.html
+++ b/templates/conventions/recapitulatif/stationnements.html
@@ -11,11 +11,7 @@
                                 Stationnements
                             </h4>
                         </div>
-                        {% if convention|display_convention_form_progressbar %}
-                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:stationnements' convention_uuid=convention.uuid %}" >
-                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                            </a>
-                        {% endif %}
+                        {% include "conventions/actions/goto.html" %}
                     </div>
                     {% if stationnements %}
                         <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
