--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -33,6 +33,13 @@
                                         </a>
                                     </div>
                                 {% endif %}
+                                {% if CERBERE_AUTH %}
+                                    <div class="fr-mr-3w">
+                                        <a class="fr-btn" href="{% url 'conventions:selection_from_zero' %}">
+                                            <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une convention ANRU
+                                        </a>
+                                    </div>
+                                {% endif %}
                                 {% if not request.user.is_staff %}
                                     <div>
                                         <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
@@ -82,6 +89,20 @@
                                     {% else %}
                                         Créer une nouvelle convention
                                     {% endif %}
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            {% if CERBERE_AUTH %}
+                <div class="fr-container-fluid">
+                    <div class="fr-container">
+                        <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
+                            <div class="fr-my-5w">
+                                <a class="fr-btn" href="{% url 'conventions:selection_from_zero' %}">
+                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>
+                                    Créer une convention ANRU
                                 </a>
                             </div>
                         </div>
