--- a/templates/conventions/actions/update_date_signature.html
+++ b/templates/conventions/actions/update_date_signature.html
@@ -5,7 +5,7 @@
         <div class="block--row-strech-1 fr-mr-6w">
 
             <p>
-                Votre convention a été signée le {{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}.<br/>
+                {% if convention.is_avenant %}Votre avenant a été signé{% else %}Votre convention a été signée{% endif %} le {{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}.<br/>
                 Ce n'est pas la bonne date ?
             </p>
             {% include "common/form/input_date.html" with form_input=updatedate_form.televersement_convention_signee_le editable=True %}
