--- a/templates/conventions/avenant_list.html
+++ b/templates/conventions/avenant_list.html
@@ -12,7 +12,7 @@
                 <div class="fr-col-11">
                     <div class="fr-grid-row">
                         <p class="fr-m-0">
-                            Avenant {{convention.numero }} du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>:&nbsp;{% if convention.description_avenant %}
+                            Avenant {{convention.numero|default_if_none:'x' }} {% if convention.televersement_convention_signee_le %}du <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-' }} </strong></span>{% endif %}:&nbsp;{% if convention.description_avenant %}
                                 {{ convention.description_avenant|linebreaksbr }}
                             {% endif %}
                         </p>
@@ -24,14 +24,20 @@
 
                 </div>
             {% else %}
-                <div class="fr-col-11">
-                    <div class="fr-grid-row">
-                        Avenant {{convention.numero }} du <span class="fr-ml-1v"><strong> {{convention.valide_le|date:"d F Y"|default_if_none:'-' }} </strong></span>
-                        <div class="fr-ml-2w"><strong>{% include "conventions/home/statut_tag.html"  %}</strong></div>
+                <div class="fr-grid-row fr-grid-row--middle fr-mb-3w">
+                    <div>
+                        Avenant {{convention.numero|default_if_none:'x'}}
+                        {% if convention.televersement_convention_signee_le %}
+                            du <span class="fr-ml-1v">
+                                <strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-' }} </strong>
+                            </span>
+                        {% endif %}
+                        <div>
+                            <a class="fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" >Voir l'avenant</a>
+                        </div>
                     </div>
-                    <div class="fr-mb-3w fr-mt-n1v">
-                        <a class="fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}" >Voir l'avenant</a>
-                    </div>
+
+                    <div class="fr-ml-4w"><strong>{% include "conventions/home/statut_tag.html"  %}</strong></div>
                 </div>
             {% endif %}
         </div>
