--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -56,7 +56,7 @@
                         <div class="fr-container">
                             <ul class="fr-tabs__list" role="tablist" aria-label="Liste des conventions">
                                 {% include 'conventions/home/_tab.html' with tab_active=active count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_in_progress' %}
-                                {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_active' %}
+                                {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='actives' title='Conventions actives' route='conventions:search_completed' %}
                                 {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='terminées' title='Conventions terminées' route='conventions:search_active' %}
                                 <li class="fr-ml-md-auto">
                                     <a class="fr-tabs__tab" href="{% url 'conventions:loyer_simulateur' %}" title="Calculatrice de loyers" aria-selected="false">
