--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -146,7 +146,7 @@
 
                     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--right">
                         <button class="fr-btn" id="search_btn">
-                            <span class="fr-fi-search-line fr-mr-1w" aria-hidden="true"></span>
+                            <span class="fr-icon-search-line fr-mr-1w" aria-hidden="true"></span>
                             Rechercher
                         </button>
                     </div>
