--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -81,7 +81,7 @@
                                                 </div>
                                                 <div class="fr-modal__content">
                                                     <h1 id="fr-modal-2-title" class="fr-modal__title">
-                                                        <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                                        <span class="fr-icon-arrow-right-line fr-icon--lg"></span>
                                                         Attention
                                                     </h1>
                                                     {% for error in formset.optional_errors %}
