--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="fr-container">
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
-                        <span class="fr-icon-community-line fr-fi--xxl" aria-hidden="true"></span>
+                        <span class="fr-icon-community-line fr-icon--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
                         <h3>Côté bailleur</h3>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="fr-grid-row fr-grid-row--gutters fr-mb-3w">
                     <div class="fr-col-lg-1 fr-col-md-3">
-                        <span class="fr-icon-draft-line fr-fi--xxl" aria-hidden="true"></span>
+                        <span class="fr-icon-draft-line fr-icon--xxl" aria-hidden="true"></span>
                     </div>
                     <div class="fr-col-lg-7 fr-col-md-9">
                         <h3>Côté instructeur</h3>
