--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -75,7 +75,7 @@
             {% if not CRISP_WEBSITE_ID and not CERBERE_AUTH %}
                 <div class="container__feedback_btn">
                     <a href="mailto:contact@apilos.beta.gouv.fr" class="cta">
-                        <span class="apilos-icon fr-fi-mail-line" aria-hidden="true"></span>
+                        <span class="apilos-icon fr-icon-mail-line" aria-hidden="true"></span>
                         <span class="button-text">Faites nous part de vos retours</span>
                     </a>
                 </div>
