--- a/templates/settings/add_user.html
+++ b/templates/settings/add_user.html
@@ -90,7 +90,7 @@
                                     {% include "settings/form/select_administration.html" with form_input=form.administration %}
                                 {% endif %}
                             {% endif %}
-                            <button class="fr-btn fr-fi-save-line fr-btn--icon-left fr-mt-3w" type="submit">
+                            <button class="fr-btn fr-icon-save-line fr-btn--icon-left fr-mt-3w" type="submit">
                                 Enregistrer
                             </button>
                         </form>
