--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -46,7 +46,7 @@
 
 
 
-                        <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
+                        <button class="fr-btn fr-icon-save-line fr-btn--icon-left" type="submit">
                             Enregistrer
                         </button>
                     </form>
