--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -44,7 +44,7 @@
                             {% if request.user.is_superuser %}
                                 {% include "common/form/input_checkbox.html" with form_input=form.is_superuser %}
                             {% endif %}
-                            <button class="fr-btn fr-fi-save-line fr-btn--icon-left fr-mt-3w" type="submit">
+                            <button class="fr-btn fr-icon-save-line fr-btn--icon-left fr-mt-3w" type="submit">
                                 Enregistrer
                             </button>
                         </form>
