--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -50,7 +50,7 @@
                                 {% endif %}
                             {% endif %}
 
-                            <button class="fr-btn fr-fi-save-line fr-btn--icon-left fr-mt-3w" type="submit">
+                            <button class="fr-btn fr-icon-save-line fr-btn--icon-left fr-mt-3w" type="submit">
                                 Enregistrer
                             </button>
                         </form>
