--- a/templates/conventions/home/bailleur_no_convention.html
+++ b/templates/conventions/home/bailleur_no_convention.html
@@ -59,7 +59,7 @@
     </div>
     <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center fr-mb-5w">
         <a class="fr-btn" href="{% url 'conventions:selection' %}">
-            <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Je suis prêt à commencer ma convention
+            <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Je suis prêt à commencer ma convention
         </a>
     </div>
 </div>
