--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -28,21 +28,21 @@
                                 </div>
                                 {% if not CERBERE_AUTH and not request.user.is_staff %}
                                     <div class="fr-mr-3w">
-                                        <a class="fr-btn fr-fi-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
                                             Créer une nouvelle convention
                                         </a>
                                     </div>
                                 {% endif %}
                                 {% if CERBERE_AUTH %}
                                     <div class="fr-mr-3w">
-                                        <a class="fr-btn fr-fi-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
                                             Créer une convention ANRU
                                         </a>
                                     </div>
                                 {% endif %}
                                 {% if not request.user.is_staff %}
                                     <div>
-                                        <a class="fr-btn fr-fi-add-line fr-btn--icon-left fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
+                                        <a class="fr-btn fr-icon-add-line fr-btn--icon-left fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
                                             Créer un avenant
                                         </a>
                                     </div>
@@ -82,7 +82,7 @@
                     <div class="fr-container">
                         <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                             <div class="fr-my-5w">
-                                <a class="fr-btn fr-fi-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
+                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
                                     {% if request|is_instructeur %}
                                         Créer une nouvelle convention comme un bailleur
                                     {% else %}
@@ -99,7 +99,7 @@
                     <div class="fr-container">
                         <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
                             <div class="fr-my-5w">
-                                <a class="fr-btn fr-fi-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
+                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection_from_zero' %}">
                                     Créer une convention ANRU
                                 </a>
                             </div>
