--- a/templates/conventions/loyer.html
+++ b/templates/conventions/loyer.html
@@ -18,15 +18,15 @@
                         </div>
                         {% if not CERBERE_AUTH and not request.user.is_staff %}
                             <div class="fr-mr-3w">
-                                <a class="fr-btn" href="{% url 'conventions:selection' %}">
-                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
+                                <a class="fr-btn fr-icon-add-line fr-btn--icon-left" href="{% url 'conventions:selection' %}">
+                                    Créer une nouvelle convention
                                 </a>
                             </div>
                         {% endif %}
                         {% if not request.user.is_staff %}
                             <div>
                                 <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
-                                    <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                                    <span class="fr-icon-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
                                 </a>
                             </div>
                         {% endif %}
