--- a/templates/layout/header_cerbere.html
+++ b/templates/layout/header_cerbere.html
@@ -28,13 +28,13 @@
                         <div class="fr-mb-1w">
                             <span class="fr-text--sm fr-px-1w">{{ request.user }}</span>
                             <a class="fr-mt-1w width-100 no-target-blank" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-                                <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>
+                                <span class="fr-icon-question-line fr-mr-1w" aria-hidden="true"></span>
                             </a>
                             <a href="{% url 'settings:profile' %}">
                                 <span class="fr-icon-settings-5-line fr-mr-1w" aria-hidden="true"></span>
                             </a>
                             <a href="{% url 'cas_ng_logout' %}?next=/">
-                                <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true">
+                                <span class="fr-icon-logout-box-r-line fr-mr-1w" aria-hidden="true">
                                 </span>
                             </a>
                         </div>
@@ -43,7 +43,7 @@
                         <ul class="fr-links-group">
                             <li>
                                 <a class="fr-link fr-text--lg" href="//docs.apilos.beta.gouv.fr" alt="Aide en ligne" title="Aide en ligne" target="_blank" rel="noopener">
-                                    <span class="fr-fi-question-line" aria-hidden="true"></span>
+                                    <span class="fr-icon-question-line" aria-hidden="true"></span>
                                 </a>
                             </li>
                         </ul>
