--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -99,7 +99,7 @@
                         </div>
                         {% include "common/required_fields_info.html" %}
 
-                        <button class="fr-btn fr-fi-save-line fr-btn--icon-left" type="submit">
+                        <button class="fr-btn fr-icon-save-line fr-btn--icon-left" type="submit">
                             Enregistrer
                         </button>
                     </form>
