--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -58,20 +58,7 @@
                     </div>
                 </div>
                 <div class="fr-container-fluid">
-                    <div class="fr-tabs fr-col-12">
-                        <div class="fr-container">
-                            <ul class="fr-tabs__list" role="tablist" aria-label="Liste des conventions">
-                                {% for name, tab in tabs.items %}
-                                    {% include 'conventions/home/_tab.html' with tab_active=tab.is_active count=tab.count title=tab.title route=tab.route %}
-                                {% endfor %}
-                                <li class="fr-ml-md-auto">
-                                    <a class="fr-tabs__tab " href="{% url 'conventions:loyer_simulateur' %}" title="Calculatrice de loyers" aria-selected="false">
-                                        <span class="fr-link"><span aria-hidden="true" class="fr-icon-equalizer-fill"></span> Calculatrice de loyers</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                    {% include "./_partial/tabs.html" %}
                 </div>
             </div>
 
